k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          command: ["sh", "-c"]
          args:
            - redis-server --requirepass "$REDIS_PASSWORD"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data   # <-- THIS is what triggers binding
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
